# mgdcli

./: Cargo.toml  README.md
src/: lib.rs  query.rs  service.rs
tests/: test.rs
