[package]
name = "mangadex"
authors = ["Nguyen Duc Toan <ntoan96@gmail.com>"]
description = "Client of mangadex API"
version = "0.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive"] }
derive_builder = "0.12.0"
futures = "0.3.28"
getset = "0.1.2"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["limit", "util"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
zip = "0.6.6"

[dev-dependencies]
tempfile = "3.5.0"
tokio = { version = "1.28.2", features = ["macros"] }

